fixed v/h scrollbars

--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,7 +1,6 @@
 @import '../../styles/globals.scss';
 
 .Title {        
-    width:100%;
     display: none;
     padding-left: $column-gutter;
     align-items: center;
